# compiler-homeworks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Report/: document.tex
Tests/: CMakeLists.txt
Tests/CSE/: CMakeLists.txt  eli-adds1.c  eli-adds2.c  eli-adds3.c  eli-loads1.c  eli-loads2.c  eli-loads3.c  eli-ptr1.c  eli-ptr2.c  eli-ptr3.c  eli-ptr4.c  noeffect1.c  noeffect2.c  noeffect3.c
Tests/DCE/: CMakeLists.txt  test1.c
Transform/: CMakeLists.txt  CSE.cpp  DCE.cpp
